--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>XYLENEX SIA — Mobile Apps</title>
     <meta
       name="description"
-      content="XYLENEX SIA — Mobile apps and digital products. Contact: contact@xylenexdev.com"
+      content="XYLENEX SIA (Google Play Developer ID: 5097653683382524442) — Mobile apps & digital products. Contact: contact@xylenexdev.com"
     />
     <meta name="theme-color" content="#0b1220" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- Optional: nice font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
@@ -20,6 +19,7 @@
   </head>
 
   <body>
+    <!-- HEADER -->
     <header class="header">
       <div class="container nav">
         <a class="brand" href="#top" aria-label="XYLENEX SIA home">
@@ -31,7 +31,8 @@
           <a href="#apps">Apps</a>
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
-          <a class="btn small" href="#privacy">Privacy</a>
+          <a href="#privacy">Privacy</a>
+          <a href="#terms">Terms</a>
         </nav>
       </div>
     </header>
@@ -48,7 +49,7 @@
             </p>
 
             <div class="cta">
-              <!-- Replace the Google Play URL when you want -->
+              <!-- Update this link if you know your exact developer page URL -->
               <a class="btn" href="#" target="_blank" rel="noopener">View on Google Play</a>
               <a class="btn ghost" href="#apps">See apps</a>
             </div>
@@ -63,6 +64,10 @@
                 <a href="tel:+37126205676">+371 26205676</a>
               </div>
             </div>
+
+            <p class="muted small" style="margin-top: 12px;">
+              Developer ID: <strong>5097653683382524442</strong>
+            </p>
           </div>
 
           <div class="hero-card" role="img" aria-label="App preview placeholder">
@@ -81,7 +86,7 @@
               </div>
             </div>
             <p class="muted center">
-              Add screenshots later (optional). This box is just a clean placeholder.
+              Add screenshots later (optional). This is a clean placeholder.
             </p>
           </div>
         </div>
@@ -96,7 +101,6 @@
           </div>
 
           <div class="cards">
-            <!-- APP CARD 1 -->
             <article class="card">
               <h3>App Name #1</h3>
               <p>Short description of what the app does and who it helps.</p>
@@ -106,7 +110,6 @@
               </div>
             </article>
 
-            <!-- APP CARD 2 -->
             <article class="card">
               <h3>App Name #2</h3>
               <p>Short description of what the app does and why users love it.</p>
@@ -116,10 +119,9 @@
               </div>
             </article>
 
-            <!-- APP CARD 3 -->
             <article class="card">
               <h3>App Name #3</h3>
-              <p>Short description. You can remove or duplicate cards as needed.</p>
+              <p>Short description. Duplicate or remove these cards as needed.</p>
               <div class="card-actions">
                 <a class="btn small" href="#" target="_blank" rel="noopener">Google Play</a>
                 <a class="btn small ghost" href="#contact">Support</a>
@@ -135,7 +137,7 @@
           <div class="section-head">
             <h2>About XYLENEX SIA</h2>
             <p class="muted">
-              We develop and publish mobile apps under the developer name <strong>XYLENEX SIA</strong>.
+              We develop and publish mobile applications under the developer name <strong>XYLENEX SIA</strong>.
             </p>
           </div>
 
@@ -145,10 +147,14 @@
               <ul class="list">
                 <li><span>Legal name</span><strong>XYLENEX SIA</strong></li>
                 <li><span>Developer name</span><strong>XYLENEX SIA</strong></li>
+                <li><span>Developer ID</span><strong>5097653683382524442</strong></li>
                 <li><span>Address</span><strong>Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050</strong></li>
                 <li><span>Phone</span><strong><a href="tel:+37126205676">+371 26205676</a></strong></li>
                 <li><span>Email</span><strong><a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a></strong></li>
-                <li><span>Website</span><strong><a href="https://xylenexdev.com" target="_blank" rel="noopener">xylenexdev.com</a></strong></li>
+                <li>
+                  <span>Website</span>
+                  <strong><a href="https://xylenexdev.com" target="_blank" rel="noopener">xylenexdev.com</a></strong>
+                </li>
               </ul>
             </div>
 
@@ -161,7 +167,7 @@
               </ul>
 
               <div class="note">
-                <strong>Tip:</strong> If Google Play ever asks for a developer website,
+                <strong>Tip:</strong> If Google Play asks for a developer website,
                 this page includes your identity and contact details in one place.
               </div>
             </div>
@@ -173,19 +179,23 @@
       <section id="contact" class="section">
         <div class="container">
           <div class="section-head">
-            <h2>Contact</h2>
+            <h2>Contact Us</h2>
             <p class="muted">For support, partnerships, or business inquiries.</p>
           </div>
 
           <div class="contact-grid">
             <div class="card">
+              <h3>Company</h3>
+              <p><strong>XYLENEX SIA</strong></p>
+              <p class="muted">Google Play Developer ID: 5097653683382524442</p>
+            </div>
+
+            <div class="card">
               <h3>Email</h3>
               <p>
                 <a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a>
               </p>
-              <p class="muted">
-                We usually reply within 1–2 business days.
-              </p>
+              <p class="muted">We usually reply within 1–2 business days.</p>
             </div>
 
             <div class="card">
@@ -193,72 +203,182 @@
               <p>
                 <a href="tel:+37126205676">+371 26205676</a>
               </p>
-              <p class="muted">
-                Available during standard business hours.
-              </p>
+              <p class="muted">Available during standard business hours.</p>
             </div>
 
             <div class="card">
               <h3>Address</h3>
-              <p>Mazā Smilšu iela 8<br />Centra rajons, Rīga, LV-1050</p>
-              <p class="muted">
-                Latvia
+              <p>
+                Mazā Smilšu iela 8<br />
+                Centra rajons, Rīga<br />
+                LV-1050, Latvia
               </p>
             </div>
           </div>
         </div>
       </section>
 
-      <!-- PRIVACY -->
+      <!-- PRIVACY POLICY -->
       <section id="privacy" class="section alt">
         <div class="container">
           <div class="section-head">
             <h2>Privacy Policy</h2>
             <p class="muted">
-              This is a simple placeholder privacy policy for your developer landing page.
-              If you have apps that collect data, we should tailor this properly.
+              This Privacy Policy applies to all applications and services published by XYLENEX SIA
+              (Google Play Developer ID: 5097653683382524442).
             </p>
           </div>
 
           <div class="policy">
-            <h3>1. Overview</h3>
+            <h3>1. Introduction</h3>
             <p>
-              XYLENEX SIA (“we”, “our”) operates this website to provide information and support
-              related to our mobile applications.
+              XYLENEX SIA ("we", "our", or "us") operates mobile applications published on Google Play.
+              This Privacy Policy explains how we collect, use, and protect information when you use our apps
+              or visit our website.
             </p>
 
-            <h3>2. Data we collect</h3>
+            <h3>2. Information We Collect</h3>
+            <p>Depending on the app, we may collect the following types of information:</p>
+            <ul class="bullets">
+              <li>Basic technical information such as device type, OS version, and app version</li>
+              <li>Anonymous usage data and diagnostics</li>
+              <li>Advertising identifiers (if ads are enabled)</li>
+              <li>Information you provide when contacting us by email</li>
+            </ul>
+
+            <h3>3. How We Use Information</h3>
+            <p>We use collected data to:</p>
+            <ul class="bullets">
+              <li>Operate and improve our applications</li>
+              <li>Fix bugs and improve performance</li>
+              <li>Provide customer support</li>
+              <li>Comply with legal obligations</li>
+            </ul>
+
+            <h3>4. Third-Party Services</h3>
             <p>
-              This website does not require you to create an account. If you contact us by email,
-              we receive the information you send (such as your email address and message content).
+              Our apps may use third-party services provided by Google or other partners that may collect
+              information used to identify you. These may include:
+            </p>
+            <ul class="bullets">
+              <li>Google Play Services</li>
+              <li>Google Analytics for Firebase</li>
+              <li>Google AdMob (if applicable)</li>
+            </ul>
+            <p>
+              These services have their own privacy policies governing how they use data.
             </p>
 
-            <h3>3. How we use data</h3>
+            <h3>5. Data Security</h3>
             <p>
-              We use emails only to respond to support requests and business inquiries.
-              We do not sell your personal data.
+              We take reasonable measures to protect your information. However, no method of transmission
+              over the internet or electronic storage is 100% secure.
             </p>
 
-            <h3>4. Third-party services</h3>
+            <h3>6. Children’s Privacy</h3>
             <p>
-              Our apps may use third-party services (such as Google Play services, analytics, or advertising)
-              depending on the app. Each app’s store listing and/or in-app privacy information describes what applies.
+              Our apps are not intended for children under the age of 13 unless explicitly stated.
+              We do not knowingly collect personal data from children.
             </p>
 
-            <h3>5. Contact</h3>
+            <h3>7. Changes to This Policy</h3>
             <p>
-              If you have questions about this policy, contact us at
-              <a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a>.
+              We may update this Privacy Policy from time to time. Any changes will be posted on this page.
+            </p>
+
+            <h3>8. Contact Us</h3>
+            <p>
+              If you have questions about this Privacy Policy, you can contact us at:
+            </p>
+
+            <p>
+              <strong>XYLENEX SIA</strong><br />
+              Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050<br />
+              Email: <a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a><br />
+              Phone: +371 26205676
             </p>
 
             <p class="muted small">
-              Last updated: <span id="lastUpdated"></span>
+              Last updated: <span id="privacyUpdated"></span>
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- TERMS OF SERVICE -->
+      <section id="terms" class="section">
+        <div class="container">
+          <div class="section-head">
+            <h2>Terms of Service</h2>
+            <p class="muted">
+              These Terms govern your use of applications and services provided by XYLENEX SIA.
+            </p>
+          </div>
+
+          <div class="policy">
+            <h3>1. Acceptance of Terms</h3>
+            <p>
+              By downloading or using any application published by XYLENEX SIA, you agree to be bound by these Terms.
+              If you do not agree, please do not use our services.
+            </p>
+
+            <h3>2. Use of Our Applications</h3>
+            <p>
+              You agree to use our apps only for lawful purposes and in accordance with applicable laws.
+              You must not misuse, reverse engineer, or attempt to disrupt our services.
+            </p>
+
+            <h3>3. Intellectual Property</h3>
+            <p>
+              All content, trademarks, logos, and software associated with our apps are the property of
+              XYLENEX SIA unless otherwise stated. Unauthorized use is prohibited.
+            </p>
+
+            <h3>4. Third-Party Services</h3>
+            <p>
+              Our applications may include third-party SDKs or services. We are not responsible for the
+              content or practices of these third parties.
+            </p>
+
+            <h3>5. Disclaimer</h3>
+            <p>
+              Our apps are provided “as is” without warranties of any kind. We do not guarantee that
+              the services will be error-free or uninterrupted.
+            </p>
+
+            <h3>6. Limitation of Liability</h3>
+            <p>
+              To the maximum extent permitted by law, XYLENEX SIA shall not be liable for any indirect,
+              incidental, or consequential damages arising from your use of our applications.
+            </p>
+
+            <h3>7. Changes to These Terms</h3>
+            <p>
+              We may update these Terms from time to time. Continued use of our apps after updates
+              means you accept the revised Terms.
+            </p>
+
+            <h3>8. Contact Information</h3>
+            <p>
+              For questions regarding these Terms, contact us:
+            </p>
+
+            <p>
+              <strong>XYLENEX SIA</strong><br />
+              Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050<br />
+              Email: <a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a><br />
+              Phone: +371 26205676
+            </p>
+
+            <p class="muted small">
+              Last updated: <span id="termsUpdated"></span>
             </p>
           </div>
         </div>
       </section>
     </main>
 
+    <!-- FOOTER -->
     <footer class="footer">
       <div class="container footer-grid">
         <div>
@@ -267,7 +387,7 @@
             <span class="brand-text">XYLENEX SIA</span>
           </div>
           <p class="muted">
-            Developer website for apps published by XYLENEX SIA.
+            Developer website for apps published by XYLENEX SIA (Google Play Developer ID: 5097653683382524442).
           </p>
         </div>
 
@@ -276,20 +396,24 @@
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
           <a href="#privacy">Privacy</a>
+          <a href="#terms">Terms</a>
         </div>
 
         <div class="muted small right">
           © <span id="year"></span> XYLENEX SIA<br />
           Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050<br />
-          Phone: +371 26205676
+          Phone: +371 26205676<br />
+          Email: <a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a>
         </div>
       </div>
     </footer>
 
     <script>
-      // Simple footer dates
+      // Footer + legal dates
+      const today = new Date().toLocaleDateString();
       document.getElementById("year").textContent = new Date().getFullYear();
-      document.getElementById("lastUpdated").textContent = new Date().toLocaleDateString();
+      document.getElementById("privacyUpdated").textContent = today;
+      document.getElementById("termsUpdated").textContent = today;
     </script>
   </body>
 </html>
